--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ torchvision==0.19.0
 numpy==2.1.1
 pillow==10.4.0
 matplotlib==3.9.2
+seaborn==0.13.2
 scikit-learn==1.5.2
-
+tqdm==4.66.5
+jupyterlab==4.2.5
